# LibtorchDemo

./: .gitattributes  .gitignore  CMakeLists.txt  DockerFile  LibtorchDemo.cpp  LibtorchDemo.h  LibtorchDemo.kdev4  Mnist.cpp  README.md  run.bat  run.sh
.kdev4/: LibtorchDemo.kdev4
